# toolkit

./: BUILD.bazel  Dockerfile  WORKSPACE  build.gradle  dependencies.properties  proto-gen-gapic-generator.sh  protoc-gen-gapic-generator  repositories.bzl
.circleci/: config.yml
protoc-plugin/: protoc-gen-gapic-generator
rules_gapic/: gapic.bzl
rules_gapic/java/: java_gapic.bzl  java_gapic_repositories.bzl
showcase/java/: build.gradle
src/main/java/com/google/api/codegen/: AnnotatorMain.java  GeneratorMain.java  ProtocGeneratorMain.java
src/main/java/com/google/api/codegen/annotator/: AnnotatedOutput.java  AnnotatorApp.java  GapicConfigToProtoAnnotator.java
src/main/java/com/google/api/codegen/config/: ApiModel.java  DiscoApiModel.java  DiscoGapicMethodConfig.java  DiscoveryMethodModel.java  FixedResourceNameConfig.java  FlatteningConfig.java  GapicInterfaceConfig.java  GapicMethodConfig.java  GapicProductConfig.java  LongRunningConfig.java  MethodConfig.java  MethodModel.java  ProtoApiModel.java  ProtoMethodModel.java  ProtoOneofModel.java  ResourceNameMessageConfig.java  ResourceNameMessageConfigs.java  ResourceNameOneofConfig.java  SingleResourceNameConfig.java
src/main/java/com/google/api/codegen/configgen/transformer/: DiscoveryMethodTransformer.java
src/main/java/com/google/api/codegen/discogapic/transformer/: DiscoGapicParser.java
src/main/java/com/google/api/codegen/discogapic/transformer/java/: JavaDiscoGapicRequestToViewTransformer.java
src/main/java/com/google/api/codegen/gapic/: GapicGeneratorApp.java  LegacyGapicGenerator.java  ProtoModels.java
src/main/java/com/google/api/codegen/transformer/: GapicInterfaceContext.java  SurfaceNamer.java
src/main/java/com/google/api/codegen/transformer/csharp/: CSharpGapicClientPackageTransformer.java
src/main/java/com/google/api/codegen/transformer/java/: JavaSurfaceTransformer.java
src/main/java/com/google/api/codegen/transformer/nodejs/: NodeJSGapicSurfaceTransformer.java  NodeJSPackageMetadataTransformer.java
src/main/java/com/google/api/codegen/transformer/py/: PythonGapicSurfaceTransformer.java  PythonImportSectionTransformer.java  PythonPackageMetadataTransformer.java
src/main/java/com/google/api/codegen/transformer/ruby/: RubyGapicSurfaceTransformer.java  RubyPackageMetadataTransformer.java
src/main/java/com/google/api/codegen/util/: ConfigNextVersionValidator.java  ConfigVersionValidator.java  ImmutableCollectors.java  InputFileUtil.java  ProtoParser.java
src/main/java/com/google/api/codegen/viewmodel/: PackageInfoView.java  StaticLangApiMessageView.java  StaticLangClientFileView.java
src/main/proto/com/google/api/codegen/: config.proto
src/main/proto/com/google/api/codegen/v2/: config_v2.proto
src/main/resources/com/google/api/codegen/go/: main.snip
src/main/resources/com/google/api/codegen/java/: message.snip
src/main/resources/com/google/api/codegen/packaging/: dependencies.yaml
src/test/java/com/google/api/codegen/: CodegenTestUtil.java  MixedPathTestDataLocator.java
src/test/java/com/google/api/codegen/annotator/: GapicConfigToProtoAnnotatorTest.java
src/test/java/com/google/api/codegen/config/: GapicConfigProducerTest.java  ResourceNameMessageConfigsTest.java
src/test/java/com/google/api/codegen/configgen/: ConfigGenerationTest.java
src/test/java/com/google/api/codegen/discogapic/: DiscoConfigGenerationTest.java  DiscoGapicTestBase.java
src/test/java/com/google/api/codegen/gapic/: GapicTestBase2.java  GapicTestModelGenerator.java  ProtocGapicPluginGeneratorTest.java
src/test/java/com/google/api/codegen/metacode/: SampleInitCodeTest.java
src/test/java/com/google/api/codegen/packagegen/: PackageGeneratorAppTest.java
src/test/java/com/google/api/codegen/protoannotations/: GapicCodeGeneratorAnnotationsTest.java
src/test/java/com/google/api/codegen/protoannotations/testdata/: csharp_library.baseline  go_library.baseline  java_library.baseline  java_library_no_gapic_config.baseline  library.proto  library_v2_gapic.yaml  nodejs_library.baseline  php_library.baseline  python_library.baseline  ruby_library.baseline  ruby_library_no_gapic_config.baseline
src/test/java/com/google/api/codegen/testsrc/common/: BUILD.bazel  BUILD.bzl  book_from_anywhere.proto  library.proto  library_gapic.yaml  shared_type.proto
src/test/java/com/google/api/codegen/testsrc/libraryproto/: library_gapic.yaml
src/test/java/com/google/api/codegen/transformer/: ModelTypeNameConverterTestUtil.java
src/test/java/com/google/api/codegen/transformer/go/: GoGapicSurfaceTransformerTest.java
src/test/java/com/google/api/codegen/util/: ConfigValidatorTest.java  ProtoParserTest.java
(+8 files in other folders)
