# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################
load("//rules_gapic:gapic.bzl", "proto_library_with_info", "gapic_srcjar", "proto_custom_library")
load("//rules_gapic/java:java_gapic_repositories.bzl", "java_gapic_repositories")

proto_library(
    name = "errors_proto",
    srcs = ["errors.proto"],
)

proto_library(
    name = "other_shared_type_proto",
    srcs = ["other_shared_type.proto"],
)

proto_library(
    name = "shared_type_proto",
    srcs = ["shared_type.proto"],
    deps = [
        ":other_shared_type_proto",
    ],
)

proto_library(
    name = "book_from_anywhere_proto",
    srcs = ["book_from_anywhere.proto"],
)

proto_library(
    name = "field_mask_proto",
    srcs = ["field_mask.proto"],
)

proto_library(
    name = "tagger_proto",
    srcs = ["tagger.proto"],
    deps = [
        "@com_google_api_common_protos//google/api:annotations_proto",
        "@com_google_api_common_protos//google/api:field_behavior_proto",
        "@com_google_api_common_protos//google/api:resource_proto",
    ],
)

proto_library(
    name = "library_proto",
    srcs = ["library.proto"],
    deps = [
        ":book_from_anywhere_proto",
        ":errors_proto",
        ":field_mask_proto",
        ":shared_type_proto",
        ":tagger_proto",
        "@com_google_api_common_protos//google/api:annotations_proto",
        "@com_google_api_common_protos//google/api:client_proto",
        "@com_google_api_common_protos//google/api:field_behavior_proto",
        "@com_google_api_common_protos//google/api:resource_proto",
        "@com_google_api_common_protos//google/longrunning:operations_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

proto_library_with_info(
    name = "library_proto_with_info",
    deps = [":library_proto"],
)

##############################################################################
# Java
##############################################################################
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("//rules_gapic/java:java_gapic.bzl", "java_gapic_library")
load("//rules_gapic/java:java_gapic.bzl", "java_resource_name_proto_library")
load("//rules_gapic/java:java_gapic_pkg.bzl", "java_gapic_assembly_gradle_pkg")
load(
    "//:gapic_generator.bzl",
    "gapic_generator_tests",
    "google_java_format",
    "google_java_format_verification",
)

_JAVA_GRPC_DEPS = [
    "@com_google_api_grpc_proto_google_common_protos//jar",
]

java_proto_library(
    name = "library_java_proto",
    deps = [
        ":library_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

java_grpc_library(
    name = "library_java_grpc",
    srcs = [":library_proto"],
    deps = [":library_java_proto"] + _JAVA_GRPC_DEPS,
)

java_resource_name_proto_library(
    name = "library_resource_name_java_proto",
    gapic_yaml = "library_gapic.yaml",
    deps = [":library_proto"],
)

java_gapic_library(
    name = "library_java_gapic",
    src = ":library_proto_with_info",
    gapic_yaml = "library_gapic.yaml",
    service_yaml = "library.yaml",
    test_deps = [":library_java_grpc"],
    deps = [
        ":library_java_proto",
        ":library_resource_name_java_proto",
    ] + _JAVA_GRPC_DEPS,
)

[java_test(
    name = test_name,
    test_class = test_name,
    runtime_deps = [":library_java_gapic_test"],
) for test_name in [
    "com.google.example.library.v1.LibraryServiceTest",
]]

# Opensource Packages
java_gapic_assembly_gradle_pkg(
    name = "google-example-library-v1-java",
    client_deps = [":library_java_gapic"],
    client_group = "com.google.example",
    client_test_deps = [":library_java_gapic_test"],
    grpc_deps = [":library_java_grpc"],
    grpc_group = "com.google.api.grpc",
    proto_deps = [
        ":library_java_proto",
        ":library_proto",
    ] + _JAVA_GRPC_DEPS,
    version = "0.0.0-SNAPSHOT",
)
